<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CourseEditor">

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="67dp">


        <TextView
            android:id="@+id/textViewCourseName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_margin="8dp"
            android:text="@string/course_name" />

        <EditText
            android:id="@+id/editCourseName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_margin="8dp"
            android:ems="10"
            android:hint="Course Name (EX C196)"
            android:inputType="text" />

        <TextView
            android:id="@+id/tvCourseStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_margin="8dp"
            android:text="@string/course_start" />

        <EditText
            android:id="@+id/editCourseStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_margin="8dp"
            android:inputType="date" />

        <TextView
            android:id="@+id/tvCourseEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_margin="8dp"
            android:text="@string/course_end" />

        <EditText
            android:id="@+id/editCourseEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_margin="8dp"
            android:inputType="date" />

        <TextView
            android:id="@+id/tvCourseMentor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_margin="8dp"
            android:text="@string/course_mentor" />

        <EditText
            android:id="@+id/editCourseMentor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_margin="8dp"
            android:hint="Jason Morrissette"
            android:inputType="text" />

        <TextView
            android:id="@+id/tvCourseMentorPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_margin="8dp"
            android:text="@string/course_mentor_number" />

        <EditText
            android:id="@+id/editMentorNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_margin="8dp"
            android:hint="555-555-5555"
            android:inputType="phone" />

        <TextView
            android:id="@+id/tvCourseMentorEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_margin="8dp"
            android:text="@string/course_mentor_email" />

        <EditText
            android:id="@+id/editCourseMentorEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="1"
            android:layout_margin="8dp"
            android:hint="jmorrissette@awesomeapp.com"
            android:inputType="textWebEmailAddress" />

    </GridLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="0dp"
        android:onClick="saveCourse"
        android:text="@string/save_course_button" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/course_welcome_text"
        android:textSize="18sp" />

</RelativeLayout>